--- a/footer/css/layout_2024.css
+++ b/footer/css/layout_2024.css
@@ -619,10 +619,8 @@ header#header {
 /*==================== 2025 調整 footer ====================*/
 
 footer#footer {
-  color: #5a5a5a;
-  background-color: #e9e9e9;
-  /* background-color: #6d696a; */
-  /* background-color: #8c001a; */
+  color: #f1f1f1;
+  background-color: #8c001a;
   font-size: 0.875rem;
   line-height: 2rem;
   letter-spacing: 1px;
@@ -634,7 +632,7 @@ footer#footer {
 }
 
 footer#footer a {
-  color: #3d3d3d;
+  color: #f1f1f1;
   text-decoration: none;
   transition: 0.5s;
 }
@@ -644,7 +642,6 @@ footer#footer a {
   padding: 10px 0;
   border-bottom: 1px solid #8c001a;
 }
-
 ul#bottom-menu {
   width: 1110px;
   overflow: hidden;
@@ -873,7 +870,7 @@ ul#bottom-menu a:hover {
   font-family: 微軟正黑體, "Microsoft JhengHei";
   font-weight: 600;
   line-height: 14px;
-  color: #5a5959;
+  color: #f5ebc0;
   padding-bottom: 10px;
   display: flex;
   -webkit-box-align: start;
@@ -888,7 +885,7 @@ ul#bottom-menu a:hover {
   transform: translate(37%, -50%);
   width: 200px;
   height: 2px;
-  background-color: #cfcfcf;
+  background-color: #f5ebc0;
 }
 
 .contact-pt-10 {
@@ -903,7 +900,7 @@ ul#bottom-menu a:hover {
 .contact-box p .contact-box-title {
   letter-spacing: 0.1rem;
   margin-right: 10px;
-  color: #8c001a;
+  color: #f5ebc0;
 }
 
 .contact-box p .contact-box-titleK {
@@ -1081,7 +1078,7 @@ a.m_btn:focus {
   height: 0;
   border-style: solid;
   border-width: 6.5px 0 6.5px 6px;
-  border-color: transparent transparent transparent #8c001a;;
+  border-color: transparent transparent transparent #fff9e0;
   display: inline-block;
   margin-right: 5px;
 }
