--- a/footer/css/new-change.css
+++ b/footer/css/new-change.css
@@ -698,10 +698,6 @@ white-space: nowrap;
         padding: 1px 0px 0px 5px;
     }
 
-    header#header{
-        background-color: #717070;
-    }
-
     .sub_menu_title span {
         padding: 7px 4px ;
     }
@@ -754,9 +750,6 @@ white-space: nowrap;
         padding-top: 100px !important;
     }
 
-    header#header{
-        height: 100px!important;
-    }
     .pushy-pt{
         padding-top: 20px;
     }
@@ -800,10 +793,6 @@ white-space: nowrap;
         margin-right: 20px;
         margin-left: auto;
     }
-
-    header#header {
-     background-color: transparent;
-    }
 }
 
 
@@ -825,7 +814,7 @@ white-space: nowrap;
     letter-spacing: 0.05rem;
     font-weight: 600;
     text-align: center;
-    color: #f1f1f1;
+    color: #5a5959;
     padding-top: 5px;
   }
 
@@ -878,7 +867,7 @@ white-space: nowrap;
   }
 
   .glare-style li a.ic-file{
-    background: rgb(255 83 14);
+    background:#a1041f;
   }
 
   .glare-style li a:hover:before {
@@ -890,7 +879,9 @@ white-space: nowrap;
     transform: scale(0.8);
   }
   .glare-style li a:before {
-    content: "";
+    content: "\f105";
+    display: block;
+    font-family: "Font Awesome 6 Pro";
     position: absolute;
     top: 90%;
     left: -110%;
@@ -962,7 +953,7 @@ white-space: nowrap;
     color: #fff;
   }
   .glare-style li a.ic-file:before {
-    background-color: rgb(224, 66, 3);
+    background-color: #660616;
   }
   
   .ic-youtube .fa-youtube {
